Fixed layout issues

--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@
 /******************************************************************
 General
 ******************************************************************/
+
 body {
 	background-size:200% 200%;
 	background: url("../images/wallpaper.png") no-repeat;
@@ -9,7 +10,9 @@ body {
 	height: 100%;
 	margin-top: 50px;
 	color: #fff;
-	font-family: 'Dosis', sans-serif;
+	/*font-family: 'Dosis', sans-serif;*/
+	font-family: 'Lato', sans-serif;
+
 
 }
 #first{
@@ -48,6 +51,7 @@ form input::-webkit-input-placeholder{
 	color: transparent;
 	border: none;
 }
+
 .test{
 	background-color: #4CAF50;
 	color: #0c3d5d;
@@ -117,22 +121,28 @@ a {
 	opacity: 0.5;
 }
 .theCity {
-	font-family: 'Dosis', sans-serif;
+	/*font-family: 'Dosis', sans-serif;*/
+	font-family: 'Lato', sans-serif;
 	font-size: 36px; /* Some tweener fallback that doesn't look awful */
 	font-size: 3.5em;
 	text-align: center;
 }
 .theTemp {
-	font-family: 'Dosis', sans-serif;
+	/*font-family: 'Dosis', sans-serif;*/
+	font-family: 'Lato', sans-serif;
 	font-size: 36px; /* Some tweener fallback that doesn't look awful */
 	font-size: 3.5em;
 	text-align: center;
 }
 .love {
-	font-family: 'Dosis', sans-serif;
+	/*font-family: 'Dosis', sans-serif;*/
+	font-family: 'Lato', sans-serif;
 	font-size: 36px; /* Some tweener fallback that doesn't look awful */
 	font-size: 1.5em;
 	text-align: center;
+}
+h4{
+	font-family: 'Lato', sans-serif;
 }
 h4.rightData {
 	display: inline;
@@ -142,7 +152,9 @@ h4.rightData {
 	white-space: nowrap;
 }
 h1.temp {
-	font-family: 'Dosis', sans-serif;
+	/*font-family: 'Dosis', sans-serif;*/
+	font-family: 'Lato', sans-serif;
+	font-weight: 700;
 	display: inline;
 	margin-left: 230px;
 	font-size: 50px;
@@ -185,6 +197,7 @@ Hero
 }
 
 .nextDays {
+	padding-top: 12px;
 	height: 200px;
 	/*width: 80%;*/
 	background-color: rgba(255,255,255,0.2);
@@ -335,7 +348,8 @@ Alert Box
 .alert-box {
 	padding: 1.3rem;
 	border-width: 0 0 0 0.35rem;
-	font-family: 'Open Sans', sans-serif;
+	/*font-family: 'Open Sans', sans-serif;*/
+	font-family: 'Lato', sans-serif;
 	font-size: 1.3rem;
 }
 .alert-box.radius {
